k8s-deployment/image-gallery.yaml
apiVersion: apps/v1
kind: Service
metadata:
  name: image-gallery-service
  namespace: default
spec:
  ports:
  - port: 9000
    protocol: TCP
    name: http
  selector:
    app: image-gallery
  type: NodePort

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: image-gallery
spec:
  selector:
    matchLabels:
      app: image-gallery
  replicas: 1
  template:
    metadata:
      labels:
        app: image-gallery
    spec:
      containers:
      - name: image-gallery-app
        image: gcr.io/carbide-parser-205909/image-gallery:2
        ports:
        - containerPort: 9000
