k8s-deployment/image-upload.yaml
apiVersion: v1
kind: Service
metadata:
  name: image-upload-service
  namespace: default
spec:
  ports:
  - port: 8080
    protocol: TCP
    name: http
  selector:
    app: image-upload
  sessionAffinity: None
  type: NodePort

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: image-upload
spec:
  selector:
    matchLabels:
      app: image-upload
  replicas: 1
  template:
    metadata:
      labels:
        app: image-upload
    spec:
      containers:
      - name: image-upload-app
        image: gcr.io/carbide-parser-205909/image-upload:4
        ports:
        - containerPort: 8080
        command: ["java"]
        args:
        - -Djava.security.egd=file:/dev/./urandom
        - -jar
        - /upload-service.jar
        - --gcn.bucket-name=thumbnail-service
        - --thumbnail-service.port=8888
        - --thumbnail-service.hostname=image-thumb-generator-service.default
