k8s-deployment/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: thumby-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: upload
spec:
  hosts:
  - "*"
  gateways:
  - thumby-gateway
  http:
  # prefix gallery route to gallery service
  - match:
    - uri:
        prefix: /gallery
    route:
    - destination:
        host: gallery-service
        port:
          number: 9000
  # default route to upload service
  - route:
    - destination:
        host: upload-service
        port:
          number: 8080
