k8s-deployment/gcloud-storage-egress.yaml
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: cloudstorage
spec:
  hosts:
  - "*.googleapis.com"
  ports:
  - number: 443
    name: https
    protocol: HTTPS
  - number: 80
    name: http
    protocol: HTTP
  resolution: DNS
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: cloudstorage
spec:
  hosts:
  - googleapis.com
  tls:
  - match:
    - port: 443
      sni_hosts:
      - googleapis.com
    route:
    - destination:
        host: googleapis.com
        port:
          number: 443
