k8s-deployment/ingress-fanout.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: image-fanout-ingress
spec:
  rules:
  # replace 'your-domain.de' with your domain
  - host: gallery.cluster1.<your-domain.de>
    http:
      paths:
      - backend:
          serviceName: image-gallery-service
          servicePort: 9000
  # replace 'your-domain.de' with your domain
  - host: upload.cluster1.<your-domain.de>
    http:
      paths:
      - backend:
          serviceName: image-upload-service
          servicePort: 8080
