k8s-deployment/upload-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: upload-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: upload
spec:
  hosts:
  - "*"
  gateways:
  - upload-gateway
  http:
  - route:
    - destination:
        host: upload-service
        port:
          number: 8080
